<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--TODO add logoutbutton-->

    <item
        android:id="@+id/refresh_button"
        android:icon="@drawable/ic_refresh_white2_24dp"
        android:orderInCategory="1"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort_button"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="2"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/sort_oldest_first"
                android:orderInCategory="1"
                android:title="@string/sort_oldest_first" />
            <item
                android:id="@+id/sort_newest_first"
                android:orderInCategory="2"
                android:title="@string/sort_newest_first" />
        </menu>

    </item>

    <item
        android:id="@+id/show_schedule"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="3"
        android:title="Show schedule"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="4"
        android:title="logout"
        app:showAsAction="collapseActionView" />

</menu>