<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="se.mah.projekt_1.LogInActivity"
    android:orientation="vertical"
    android:divider="@drawable/vertical_divider_start"
    android:showDividers="middle">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_standard_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card_view:cardCornerRadius="8dp"
        android:clickable="true"
        android:foreground="@drawable/card_foreground"
        android:stateListAnimator="@drawable/elevation_on_click">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/log_in_username"
            android:textSize="@dimen/start_screen_textSize" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_nfc_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card_view:cardCornerRadius="8dp"
        android:clickable="true"
        android:foreground="@drawable/card_foreground"
        android:stateListAnimator="@drawable/elevation_on_click">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/log_in_card"
            android:textSize="@dimen/start_screen_textSize"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_nfc_check_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        card_view:cardCornerRadius="8dp"
        android:clickable="true"
        android:foreground="@drawable/card_foreground"
        android:stateListAnimator="@drawable/elevation_on_click">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/stamp_in"
            android:textSize="@dimen/start_screen_textSize"/>

    </android.support.v7.widget.CardView>

</LinearLayout>
